--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -188,3 +188,29 @@ header{
         margin-right: 20px;
     }
 }
+
+
+.info__inner{
+    margin-top: 190px;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+   
+    .info__item{
+        height: 400px;
+        width: 370px;
+        // background-color: gold;
+        padding: 0 35px;
+        box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
+        border-radius: 4px;
+        line-height: 25px;
+        font-size: 16px;
+        h3{
+            font-size: 24px;
+        }
+        img{
+            margin-top: 45px;
+        }
+    }
+}
+
