--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -856,8 +856,8 @@ header{
 .become__left-content{
     background-image: url(../img/BG-become.png);
     background-repeat: no-repeat;
-    min-height: 100vh;
-    
+    // min-height: 100vh;
+    height: 580px;
     background-position: center;
     background-size: cover;
     
@@ -865,7 +865,8 @@ header{
 .become__right-content{
     background-image: url(../img/BG-become2.png);
     background-repeat: no-repeat;
-    min-height: 100vh;
+    // height: 100vh;
+    height: 580px;
 
     background-position: center;
     background-size: cover;
@@ -877,3 +878,91 @@ header{
 
 
 //become__end
+
+//feedback__start
+.feedback{
+    height: 830px;
+}
+.feedback__inner{
+    display: flex;
+    justify-content: space-between;
+}
+.feedback__title{
+    text-align: center;
+    margin-top: 115px;
+    font-size: 36px;
+    span{
+        color: $blue;
+    }
+}
+.feedback__title-discr{
+    text-align: center;
+    width: 670px;
+    margin: 0 auto;
+    margin-bottom: 60px;
+    
+}
+.feedback__inner-item{
+    width: 550px;
+    height: 350px;
+    border-left: 1px solid $blue;
+    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
+}
+
+.item__top-info{
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.item__bot-info{
+    padding: 0 35px;
+    p{
+        line-height: 30px;
+    }
+}
+
+.user-feedback-info{
+    display: flex;
+    align-items: center;
+    
+}
+.item__photo-discr{
+    margin-left: 20px;
+    .item__job{
+        margin-top: 5px;
+    }
+}
+
+
+.feedback-btn{
+    margin-top: 50px;
+    text-align: center;
+    
+    button + button{
+        margin-left: 10px;
+    }
+    button{
+        border: 1px solid #fff;
+        color: white;
+        padding: 10px 20px 10px 20px;
+        background-color: #186dda;
+        border-radius: 50px;      
+        cursor: pointer;
+        transition: all .7s;
+    }
+    button:hover{
+        // margin-right: 50px;
+        color: blue;
+        padding: 10px 20px 10px 20px;
+        background-color: #fff;
+        border-radius: 50px;
+       
+        cursor: pointer;
+    }
+}
+//feedback__end
+
+
+
