--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1113,3 +1113,129 @@ header{
 }
 
 //join__end
+
+//footer__top__start
+.footer__top{
+    background-color: #262b30;
+    color: #88898a;
+    h4{
+        color: $white;
+        font-size: 18px;
+    }
+}
+.footer__main-item{
+    min-width: 260px;
+}
+.footer-input-item{
+    min-width: 390px;
+}
+.telephone{
+    display: flex;
+    align-items: center;
+    img{
+        margin-right: 10px;
+    }
+}
+.mail{
+    display: flex;
+    align-items: center;
+    img{
+        margin-right: 10px;
+    }
+}
+.geo{
+    display: flex;
+    align-items: center;
+    img{
+        margin-right: 10px;
+    }
+}
+.socials{
+    display: flex;
+    .social-1{
+        background-color: #395799;
+    }
+    .social-2{
+        background-color: #19b2f5;
+    }
+    .social-3{
+        background-color: #f05b44;
+    }
+    .social-4{
+        background-color: #9c0c1c;
+    }
+    .social-5{
+        background-color: #0da6be;
+    }
+    .social-6{
+        background-color: #ea4c89;
+    }
+    a{
+        margin-top: 50px;
+        margin-right: 20px;
+        padding: 10px 10px 10px 15px;
+        background-color: black;
+        border-radius: 150px;
+        width: 50px;
+        height: 50px;
+        
+    }
+}
+.footer__inner{
+    display: flex;
+    justify-content: space-around;
+    
+    padding: 100px 0 100px;
+}
+
+.footer__inner-item{
+    width: 200px;
+    a{
+        display: block;
+        line-height: 30px;
+    }
+
+}
+
+.footer__inner-item + .footer__inner-item{
+    margin-left: 70px;
+}
+
+.footer-input{
+    border: 1px solid white;
+    background-color: $white;
+    margin-right: 94px;
+    margin-left: 10px;
+    border-radius: 10px;
+    button{
+        padding: 10px 15px;
+        background-color: #0674ec;
+        color: $white;
+        border:none;
+        border-radius: 20px;
+        cursor: pointer;
+    }
+    input{
+        border: none;
+        outline: none;
+        padding: 10px 0;
+    }
+}
+//footer__top__end
+
+
+
+
+//footer__bot__start
+
+.footer__bot{
+    text-align: center;
+    background-color: #192027;
+    color: #88898a;
+    font-size: 15px;
+    padding: 20px 0;
+    span{
+        color: #fff;
+    }
+}
+//footer__bot__end
